FIX : Project tech stack list not visible on lighter background.

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ nav {
 .certificate ul li,
 .project-tech li {
   margin-right: 20px;
-  color: var(--font-muted);
+  color: #9e9e9e;
 }
 
 .cert-title {
